# ns-3-dev-git

./: .clang-format  .clang-tidy  .codespellrc  .editorconfig  .gitattributes  .gitignore  .mailmap  .markdownlint.yml  .mdl_style.rb  .ns3.supp  1  2d_plotter.py  AGENTS.md  AUTHORS  CHANGES.html  CHANGES.md  CMakeLists.txt  CMakePresets.json.in  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README  README.md  RELEASE_NOTES  RELEASE_NOTES.md  default  git_commands  ns3  pyproject.toml  setup.cfg  setup.py  test.py  utils.py  waf  waf-helper.sh  wscript  wutils.py
examples/: CMakeLists.txt
examples/channel-models/: CMakeLists.txt  examples-to-run.py  three-gpp-leo-constellation.cc  three-gpp-v2v-channel-example.cc  three-gpp-v2v-channel-example.py  three-gpp-v2v-channel-example.sh  wscript
examples/energy/: CMakeLists.txt  energy-model-example.cc  energy-model-with-harvesting-example.cc  examples-to-run.py
examples/error-model/: CMakeLists.txt  examples-to-run.py  simple-error-model.cc
examples/ipv6/: CMakeLists.txt  examples-to-run.py  fragmentation-ipv6-PMTU.cc  fragmentation-ipv6-two-MTU.cc  fragmentation-ipv6.cc  icmpv6-redirect.cc  loose-routing-ipv6.cc  ping6-example.cc  ping6.cc  radvd-one-prefix.cc  radvd-two-prefix.cc  radvd.cc  test-ipv6.cc  wscript  wsn-ping6.cc
examples/matrix-topology/: CMakeLists.txt  adjacency_matrix.txt  matrix-topology.cc  node_coordinates.txt
examples/naming/: CMakeLists.txt  examples-to-run.py  object-names.cc
examples/realtime/: CMakeLists.txt  examples-to-run.py  realtime-udp-echo.cc  realtime-udp-echo.py
examples/routing/: CMakeLists.txt  dynamic-global-routing.cc  examples-to-run.py  global-injection-slash32.cc  global-routing-multi-switch-plus-router.cc  global-routing-slash32.cc  manet-routing-compare.cc  mixed-global-routing.cc  rip-simple-network.cc  ripng-simple-network.cc  simple-alternate-routing.cc  simple-global-routing.cc  simple-multicast-flooding.cc  simple-routing-ping6.cc  simple-routing-ping6.py  static-routing-slash32.cc  wscript
examples/socket/: CMakeLists.txt  socket-bound-static-routing.cc  socket-bound-tcp-static-routing.cc  socket-options-ipv4.cc  socket-options-ipv6.cc
examples/stats/: CMakeLists.txt  README  examples-to-run.py  wifi-example-apps.cc  wifi-example-apps.h  wifi-example-db.sh  wifi-example-sim.cc
examples/tcp/: CMakeLists.txt  dctcp-example.cc  examples-to-run.py  fack-example.cc  star.cc  star.py  tcp-bbr-example.cc  tcp-bbr-example.py  tcp-bulk-send.cc  tcp-bulk-send.py  tcp-ecn-example.cc  tcp-large-transfer.cc  tcp-linux-reno.cc  tcp-nsc-comparison.cc  tcp-nsc-lfn.cc  tcp-nsc-zoo.cc  tcp-nsc-zoo.py  tcp-pacing.cc  tcp-pacing.py  tcp-pcap-nanosec-example.cc  tcp-star-server.cc  tcp-validation.cc  tcp-variants-comparison.cc  wscript
examples/traffic-control/: CMakeLists.txt  cobalt-vs-codel.cc  examples-to-run.py  queue-discs-benchmark.cc  red-vs-fengadaptive.cc  red-vs-nlred.cc  tbf-example.cc  traffic-control-example.cc  traffic-control.cc  wscript
examples/tutorial/: CMakeLists.txt  examples-to-run.py  fifth.cc  first.cc  first.py  fourth.cc  hello-simulator.cc  second.cc  second.py  seventh.cc  sixth.cc  third.cc  third.py  tutorial-app.cc  tutorial-app.h  wscript
examples/udp/: CMakeLists.txt  examples-to-run.py  udp-echo.cc
examples/udp-client-server/: CMakeLists.txt  udp-client-server.cc  udp-trace-client-server.cc
examples/wireless/: 80211n-mimo.cc  CMakeLists.txt  examples-to-run.py  he-wifi-network.cc  ht-wifi-network.cc  mixed-network.cc  mixed-wired-wireless.cc  mixed-wired-wireless.py  parallel-scheduler.cc  power-adaptation-distance.cc  power-adaptation-interference.cc  rate-adaptation-distance.cc  simple-ht-hidden-stations.cc  vht-wifi-network.cc  wifi-80211e-txop.cc  wifi-80211n-mimo.cc  wifi-adhoc.cc  wifi-aggregation.cc  wifi-ap.cc  wifi-ap.py  wifi-backward-compatibility.cc  wifi-blockack.cc  wifi-clear-channel-cmu.cc  wifi-dso.cc  wifi-dsss-validation.cc  wifi-eht-network.cc  wifi-error-models-comparison.cc  wifi-he-network.cc  wifi-hidden-terminal.cc  wifi-ht-network.cc  wifi-mixed-network.cc  wifi-multi-tos.cc  wifi-multicast.cc  wifi-multirate.cc  wifi-network-validator.cc  wifi-ofdm-eht-validation.cc  wifi-ofdm-he-validation.cc  wifi-ofdm-ht-validation.cc  wifi-ofdm-validation.cc  wifi-ofdm-vht-validation.cc  (+23 more)
scratch/: .gitignore  CMakeLists.txt  bbr.cc  hello-world-ns3.cc  jelly_tcp-bulksend.cc  jelly_udp.cc  mysecond.cc  mythird.cc  mywifi.cc  p2p_simul.cc  queue_trace.cc  scratch-simulator.cc  tcp-bbr-example.cc  tcp.cc  tcp_bbr_vs_cubic.cc  tcp_bottleneck.cc  tcp_intraprotocol.cc  tcp_p2p.cc  tcpbbr.cc  throughput_trace.cc  wifi_simul.cc  wifi_simul_ber.cc  wscript
scratch/bandwidthestimation/: bandwidthestimation.cc  bandwidthestimation.py
scratch/direct_ip/: direct_ip.cc
scratch/mt_test/: mt_test.cc
scratch/nested-subdir/: CMakeLists.txt  scratch-nested-subdir-executable.cc
scratch/subdir/: scratch-simulator-subdir.cc  scratch-subdir-additional-header.cc  scratch-subdir-additional-header.h  scratch-subdir.cc
scratch/tutorial_app_dir/: mytutorial-app.cc  sixth.cc
src/: CMakeLists.txt  create-module.py  wscript
src/antenna/: CMakeLists.txt  wscript
src/aodv/: CMakeLists.txt  wscript
src/applications/: CMakeLists.txt  wscript
src/bridge/: CMakeLists.txt
src/brite/: CMakeLists.txt  wscript
src/buildings/: CMakeLists.txt  wscript
src/click/: CMakeLists.txt  wscript
src/coex/: CMakeLists.txt
src/config-store/: CMakeLists.txt  wscript
src/core/: CMakeLists.txt  wscript
src/csma/: CMakeLists.txt
src/csma-layout/: CMakeLists.txt
src/dsdv/: CMakeLists.txt  (+1 more)
utils/: .ns3rc  2d_plotter.py  CMakeLists.txt  YouCompleteMe.py  bench-packets.cc  bench-scheduler.cc  bench-simulator.cc  ccache-miss-rate.py  check-style-clang-format.py  check-style.py  codespell-ignored-lines  codespell-ignored-words  coverity-report.sh  create-module.py  diag-macos.sh  grid.py  print-introspected-doxygen.cc  python-unit-tests.py  run-examples-with-full-logging.sh  test-runner.cc  trim-trailing-whitespace.py  utils.h  wscript
(+4056 files in other folders)
