[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "wheel",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.0",
    "cmake-build-extension>=0.4",
    "cppyy==3.1.2",
]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.cibuildwheel]
build-frontend = "build"

[tool.black]
line-length = 100
include = "\\bns3$|\\.py$"

[tool.isort]
profile = "black"
line_length = 100
