[metadata]
name = ns3
description = ns-3 network simulator and visualizer
long_description = file: README.md
long_description_content_type = text/markdown
author = nsnam
author_email = webmaster@nsnam.org
license = GPL-2.0-only
platforms = any
url = https://www.nsnam.org/

project_urls =
    Tracker = https://gitlab.com/nsnam/ns-3-dev/-/issues
    Documentation = https://www.nsnam.org/docs/tutorial/html/index.html
    Source = https://gitlab.com/nsnam/ns-3-dev

keywords =
    network-simulator

classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX :: Linux
    #Operating System :: MacOS
    #Operating System :: Microsoft :: Windows
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: C++
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)

[options]
zip_safe = False
python_requires = >=3.8
install_requires =
    cppyy==3.1.2

